# nalamap

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STYLING_SYSTEM_REFACTOR_REPORT.md  azure-debug.docker-compose.yml  cloud-test.docker-compose.yml  dev.docker-compose.yml  docker-compose-full.yml  docker-compose.debug.yml  docker-compose.yml  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
backend/: .dockerignore  .env.local  Dockerfile  README.md  alembic.ini  deployment-config.example.json  main.py  pyproject.toml  pyproject_new.toml  requirements.txt  test_color_styling.py  test_geodata_layers_fix.py  test_multiple_layer_styling.py
backend/alembic/: env.py
backend/alembic/versions/: 20250226_add_oidc_columns.py  20250310_add_maps_layers.py  20250310_add_owner_payload.py  __init__.py
backend/api/: __init__.py  ai_style.py  auth.py  auto_styling.py  data_management.py  debug.py  deps.py  file_streaming.py  geocoding_settings.py  geoweaver.py  layers.py  maps.py  mcp.py  nalamap.py  ogc_payloads.py  proxy.py  settings.py
backend/api/endpoints/: maps.py  users.py
backend/core/: config.py  security.py
backend/db/: __init__.py  base.py  session.py
backend/db/models/: __init__.py  layer.py  map.py  map_layer.py  user.py
backend/docs/: AI_PROVIDERS.md
backend/evals/: test_geoprocess_tools.py
backend/evals/testdata/: Ecoregions.geojson  HealthStations_north.geojson  HealthStations_south.geojson  aoi.json  intersection_greenland_aoi.json  l1tc1_output.geojson  l1tc2_output.geojson  l1tc3_output.geojson  l1tc4_output.geojson  l1tc5_output.geojson  l1tc6_output.geojson  l1tc7_output.geojson  testcases.json
backend/models/: agent_session.py  deployment_config.py  geodata.py  layer.py  map.py  map_layer.py  model_info.py  settings_model.py  states.py  user.py
backend/models/messages/: chat_messages.py
backend/scripts/: test_bcrypt.py
backend/services/: ai_service.py  auto_styling_service.py  background_tasks.py  conversation_manager.py  default_agent_settings.py  deployment_config_loader.py  multi_agent_orch.py  planner.py  single_agent.py  startup_preloader.py  tool_selector.py
backend/services/agents/: geo_weaver_ai.py  geoprocessing_agent.py  langgraph_agent.py  nala_map_ai.py  supervisor_agent.py
backend/services/ai/: anthropic.py  automatic_styling.py  azureai.py  base.py  deepseek.py  google_genai.py  llm_config.py  mistralai.py  moonshot.py  openai.py  provider_interface.py  xai.py
backend/services/compression/: __init__.py  gzip_utils.py
backend/services/database/: database.py
backend/services/mcp/: __init__.py  client.py  integration.py  manager.py  server.py
backend/services/storage/: file_management.py
backend/services/tools/: ATTRIBUTE_TOOL2_README.md  README.md  annotated_tool.py  attribute_tool2.py  attribute_tool3.py  attribute_tools.py  codeinterpreter_tools.py  constants.py  ecmwf_weather.py  geocoding.py  geoprocess_tools.py  geostate_management.py  librarian_tools.py  nasa_firms_fire.py  nasa_gibs_imagery.py  ogcapi_tools.py  overpass.py  styling_tools.py  utils.py  wms_tools.py  world_bank_indicators.py
backend/services/tools/attributes/: ops.py
backend/services/tools/geocoding/: __init__.py  tag_resolver.py  tag_vector_store.py  taginfo_fetcher.py
backend/services/tools/geoprocessing/: __init__.py  projection_utils.py  utils.py  wkt_factory.py
backend/services/tools/geoprocessing/ops/: __init__.py  area.py  buffer.py  centroid.py  clip.py  dissolve.py  merge.py  overlay.py  simplify.py  sjoin.py  sjoin_nearest.py
backend/services/tools/geoserver/: custom_geoserver.py  vector_store.py
backend/tests/: README.md  conftest.py  manual_test_streaming.py  test_area_geodesic.py  test_attribute_tool2.py  test_attribute_tool3.py  test_attribute_tools.py  test_attribute_tools_large_datasets.py  test_auth_reset_bug.py  test_auto_styling_api.py  test_azure_ai_config.py  test_azure_compression.py  test_buffer_bug_fix.py  test_buffer_method_selection.py  test_cancel_functionality.py  test_color_settings.py  test_conversation_manager.py  test_deployment_config.py  test_dynamic_tools_integration.py  test_embedding_progress.py  test_file_streaming_api.py  test_fuzzy_matching.py  test_geocoding.py  test_geocoding_integration.py  test_geocoding_settings_api.py  test_geocoding_utils.py  test_geoprocess_executor.py  test_geoprocess_tool.py  test_geoprocess_tools.py  test_geoprocessing_ops.py  test_geoprocessing_ops_integration.py  test_geoserver_backend_filters.py  test_geoserver_connection_errors.py  test_geoserver_sanitization.py  test_geoserver_tools.py  test_geostate_management_tools.py  test_json_serialization.py  test_llm_buffer_diagnostic.py  test_map_layer_models.py  test_max_tokens_validation.py  (+45 more)
backend/tests/styling/: README.md  __init__.py  run_all_styling_tests.py  test_ai_styling_simple.py  test_automatic_styling.py  test_styling_simplified.py  test_styling_validation.py
backend/tests/testdata/: ProtectedAreas.geojson  greenland.json  l1tc8_output.geojson  testcases.json
backend/uploads/: 0af9e8285ee343c4b23b8e53862fa56b_test.json
backend/utility/: metrics_storage.py  performance_metrics.py  string_methods.py  tool_configurator.py  tool_settings_decorator.py
db/: datamodel.md  docker-compose.yml
docs/: 502-fix-summary.md  azure-ai-configuration.md  azure-blob-env-vars.md  azure-blob-storage-security.md  azure-container-apps-config.md  azure-storage-cors-setup.md  color-customization.md  color-usage-map.md  cookie-security-fixes.md  crs-selection-design.md  db-migrations.md  deployment-configuration.md  drag-and-drop-download-feature.md  geocoding-osm-geometry-filtering.md  model-selection-quick-reference.md  pr-docker-images.md  runtime-environment.md  week1-implementation-summary.md  wmts.md
e2e-performance/: .gitignore  GETTING_STARTED.md  README.md  docker-compose.e2e.yml  quickstart.sh  requirements.txt
e2e-tests/: GETTING_STARTED.md  README.md  docker-compose.e2e.yml  pytest.ini  quickstart.sh
(+204 files in other folders)
