[tool.poetry]
name = "backend"
version = "0.1.0"
description = "…"
authors = ["NalaMaps Dev Team"]
readme = "README.md"

# ← disable installing your project’s own code
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.8"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
langchain = ">=0.3.18"
langchain_community = ">=0.3.17"
openai = ">=1.63.0"
psycopg = {extras = ["binary","pool"], version = ">=3.2.4"}
langgraph = ">=0.2.73"
langchain_openai = ">=0.3.12"
azure-storage-blob = "*"
python-multipart = "*"
shapely = "*"
kml2geojson = "*"
geopandas = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
isort = "*"

[tool.flake8]
max-line-length = 100
extend-exclude = [
  ".venv",           # Poetry in-project virtualenv
  "venv",            # other common names
  "env",
  "__pycache__",
  "build",
  "dist",
  "**/site-packages" # just in case
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
