[tool.poetry]
name = "backend"
version = "0.1.0"
description = "NalaMap Backend - Geospatial AI Assistant"
authors = ["NalaMaps Dev Team"]

# â† disable installing your project's own code
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.8"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
langchain = ">=0.3.27"
langchain-core = ">=0.3.76"
langchain_community = "^0.3.30"
openai = ">=1.108.1"
psycopg = {extras = ["binary","pool"], version = ">=3.2.12"}
sqlalchemy = "^2.0"
geoalchemy2 = "^0.13"
langgraph = ">=0.6.7"
langchain_openai = ">=0.3.33"
owslib = "*"
httpx = "*"
sqlite-vec = ">=0.1.5"

langchain_google_genai = ">=2.1.12"
langchain_mistralai = ">=0.2.12"
azure-storage-blob = "*"
python-multipart = "*"
shapely = "*"
kml2geojson = "*"
geopandas = "*"
webcolors = "*"
matplotlib = ">=3.10.7"
httpx-sse = "^0.4.3"
pyproj = "^3.7.2"
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-jose = {extras = ["cryptography"], version = "^3.3"}
bcrypt = "^5.0.0"
authlib = "^1.4"
pydantic-settings = ">=2.11.0"
huggingface-hub = ">=0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = ">=1.2.0"
flake8 = "*"
flake8-pyproject = "*"
black = "*"
isort = "*"
alembic = "^1.11"

[tool.flake8]
max-line-length = 100
# E203: whitespace before ':' - conflicts with Black formatter for slice notation
# W503: line break before binary operator - conflicts with Black formatter
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "models/geodata.py:E501",  # Mock Data String
    "services/tools/geocoding.py:E501",  # Long docstrings and API URLs
    "services/tools/geoprocess_tools.py:E501,E203",  # Long docstrings and Black formatting
    "services/tools/geostate_management.py:E501",  # Long docstrings
    "services/tools/librarian_tools.py:E501",  # Long docstrings
    "services/tools/styling_tools.py:E501",  # Long docstrings
    "services/tools/attribute_tools.py:E501,E741",  # Long docstrings and intentional short var names
    "services/tools/geoprocessing/ops/buffer.py:E501",  # Long docstrings
    "services/tools/geoprocessing/ops/overlay.py:E501",  # Long docstrings
    "tests/conftest.py:E402",  # Import order needed for test fixtures
    "tests/test_geoprocess_tools.py:E501",  # Long test data strings
]
exclude = [
  ".venv/**",           # any file under .venv/
  "venv/**",
  "env/**",
  "__pycache__/**",
  "build/**",
  "dist/**",
  "**/site-packages/**"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--durations=10"
]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests via API",
    "e2e: End-to-end tests for complete user journeys",
    "slow: Slow running tests (>5 seconds)",
    "performance: Performance and stress tests",
    "edge_case: Edge case and boundary condition tests",
    "styling: All styling-related tests",
    "color_theory: Tests related to color theory and cartography",
    "mcp: Tests for Model Context Protocol (MCP) functionality"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
  # timeout removed: keep pytest config compatible with environments without pytest-timeout plugin
  # If you want to enable test timeouts, install pytest-timeout and add, for example:
  #   "--timeout=30"
  # to the addopts list above (original value was 30 seconds).

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
